--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <img src="img/orangelogo.png" alt="orange" style="width: 30px">
+        <li><a href="#home">Acceuil</a></li>
+        <li><a href="#expertise">Expertise</a></li>
+        <li><a href="#calculator">Calculez son RSE</a></li>
+        <li><a href="#about">A propos</a></li>
+    </ul>
+</nav>
+<section id="home">
+    <h1>Acceuil</h1>
+    <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier, notamment en Afrique et au Moyen-Orient.</p>
+    <img src="img/carteOrnage.jpg" alt="carte">
+</section>
 </body>
 </html>
