--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -17,7 +17,15 @@
 <section id="home">
     <h1>Acceuil</h1>
     <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier, notamment en Afrique et au Moyen-Orient.</p>
-    <img src="img/carteOrnage.jpg" alt="carte">
+    <img src="img/carteOrange.jpg" alt="carte">
+    <h1>Notre objectif</h1>
+    <p>Notre objectif est de proposer des solutions à orange pour reduire l'empreinte carbone et afin que l'entreprise soit plus responsable. Pour cela, nous avons mis en place un plan d'action pour réduire les émissions de CO2 et pour promouvoir les énergies renouvelables.</p>
+    <h2>La RSE c'est quoi</h2>
+    <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
+    <img src="img/rse.webp">
+    <h2>La RSE au coeur des PME</h2>
+    <p>La RSE est un enjeu majeur pour les PME. En effet, les PME ont un impact important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et à la responsabilité sociétale.</p>
+    <img src="img/pmerse.png">
 </section>
 </body>
 </html>
