--- a/index.html
+++ b/index.html
@@ -7,25 +7,53 @@
 <body>
 <nav>
     <ul>
-        <img src="img/orangelogo.png" alt="orange" style="width: 30px">
+        <img alt="orange" src="img/orangelogo.png" style="width: 70px">
         <li><a href="#home">Acceuil</a></li>
-        <li><a href="#expertise">Expertise</a></li>
-        <li><a href="#calculator">Calculez son RSE</a></li>
-        <li><a href="#about">A propos</a></li>
+        <li><a href="expertise.html">Expertise</a></li>
+        <li><a href="calculator.html">Calculez son RSE</a></li>
+        <li><a href="about.html">A propos</a></li>
     </ul>
 </nav>
 <section id="home">
     <h1>Acceuil</h1>
-    <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier, notamment en Afrique et au Moyen-Orient.</p>
+    <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en
+        France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier,
+        notamment en Afrique et au Moyen-Orient.</p>
+    <h3>L’activité d’orange en l’état actuel :</h3>
+    <p>Orange peut proposer des solutions technologiques permettant aux PME de réduire leur empreinte environnementale
+        (ex. cloud éco-responsable, outils collaboratifs pour réduire les déplacements).</p>
     <img src="img/carteOrange.jpg" alt="carte">
+
     <h1>Notre objectif</h1>
-    <p>Notre objectif est de proposer des solutions à orange pour reduire l'empreinte carbone et afin que l'entreprise soit plus responsable. Pour cela, nous avons mis en place un plan d'action pour réduire les émissions de CO2 et pour promouvoir les énergies renouvelables.</p>
-    <h2>La RSE c'est quoi</h2>
+    <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
+    <li>Environnement : impacts liés aux procédés de production (ex : consommation d’énergie et émissions de gaz à effet
+        de serre) ainsi qu’à l’usage du produit et à sa fin de vie ;
+    </li>
+    <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les
+        droits humains des employés et de la communauté, par exemple le harcèlement ;
+    </li>
+    <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
+    <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les
+        fournisseurs.
+    </li>
+    <img alt="obj" src="img/objectifs.jpeg">
+
+    <h2>La RSE qu'est-ce que c'est ?</h2>
     <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
-    <img src="img/rse.webp">
-    <h2>La RSE au coeur des PME</h2>
-    <p>La RSE est un enjeu majeur pour les PME. En effet, les PME ont un impact important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et à la responsabilité sociétale.</p>
-    <img src="img/pmerse.png">
+    <img alt="rse" src="img/rse.webp">
+
+    <h2>La RSE au cœur des PME</h2>
+    <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
+        important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
+        que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
+        à la responsabilité sociétale.</p>
+    <img alt="pmerse" src="img/pmerse.png">
+
+    <h1>Données :</h1>
+    <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
+        De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
+    </p>
+    <img alt="donnee" src="img/donnée.jpeg">
 </section>
 </body>
 </html>
