--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
     </p>
     <img alt="donnee" src="img/donnée.jpeg">
+    <p>test</p>
 </section>
 </body>
 </html>
