--- a/index.html
+++ b/index.html
@@ -2,27 +2,42 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Orange</title>
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
 <nav>
-    <ul>
-        <img alt="orange" src="img/orangelogo.png" style="width: 70px">
-        <li><a href="#home">Acceuil</a></li>
-        <li><a href="expertise.html">Expertise</a></li>
-        <li><a href="calculator.html">Calculez son RSE</a></li>
-        <li><a href="about.html">A propos</a></li>
+    <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
+        <div style="display: flex; align-items: center;">
+            <img alt="orange" src="img/orangelogo.png" style="width: 150px; margin-right: 20px;">
+            <li><a href="#home">Accueil</a></li>
+            <li><a href="expertise.html">Expertise</a></li>
+            <li><a href="calculator.html">Calculez son RSE</a></li>
+            <li><a href="about.html">A propos</a></li>
+        </div>
+        <li style="display: flex; align-items: center;">
+            <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
+            <a>Se connecter</a>
+        </li>
     </ul>
 </nav>
 <section id="home">
-    <h1>Acceuil</h1>
-    <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en
-        France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier,
-        notamment en Afrique et au Moyen-Orient.</p>
-    <h3>L’activité d’orange en l’état actuel :</h3>
-    <p>Orange peut proposer des solutions technologiques permettant aux PME de réduire leur empreinte environnementale
-        (ex. cloud éco-responsable, outils collaboratifs pour réduire les déplacements).</p>
-    <img src="img/carteOrange.jpg" alt="carte">
+    <div style="display: flex; align-items: center; margin-top: 0;">
+        <div style="flex: 1;">
+            <h1>Accueil</h1>
+            <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en
+                France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier,
+                notamment en Afrique et au Moyen-Orient.</p>
+            <h3>L’activité d’orange en l’état actuel :</h3>
+            <p>Orange peut proposer des solutions technologiques permettant aux PME de réduire leur empreinte environnementale
+                (ex. cloud éco-responsable, outils collaboratifs pour réduire les déplacements).</p>
+        </div>
+        <img src="img/carteOrange.jpg" alt="carte" style="margin-left: 20px; flex: 1;">
+    </div>
+
+
+
+
 
     <h1>Notre objectif</h1>
     <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
@@ -38,23 +53,82 @@
     </li>
     <img alt="obj" src="img/objectifs.jpeg">
 
-    <h2>La RSE qu'est-ce que c'est ?</h2>
+
+
+    <h1>La RSE qu'est-ce que c'est ?</h1>
     <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
     <img alt="rse" src="img/rse.webp">
 
-    <h2>La RSE au cœur des PME</h2>
-    <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
-        important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
-        que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
-        à la responsabilité sociétale.</p>
-    <img alt="pmerse" src="img/pmerse.png">
+    <div style="display: flex; align-items: center;">
+        <div style="flex: 1;">
+            <h1>La RSE au cœur des PME</h1>
+            <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
+                important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
+                que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
+                à la responsabilité sociétale.</p>
+        </div>
+        <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
+    </div>
 
     <h1>Données :</h1>
     <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
         De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
     </p>
     <img alt="donnee" src="img/donnée.jpeg">
-    <p>test</p>
+
+    <h1>Offres :</h1>
+    ////
+
+    <h1>Rentabilités :</h1>
+    <table border="1" style="border-collapse: collapse; width: 100%;">
+        <thead>
+        <tr style="background-color: #f2f2f2;">
+            <th>Modèle</th>
+            <th>Description</th>
+            <th>Exemple de revenus</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Abonnement SaaS</td>
+            <td>Facturation mensuelle pour accéder à la plateforme.</td>
+            <td>50-500 €/mois/PME</td>
+        </tr>
+        <tr>
+            <td>Services personnalisés</td>
+            <td>Consulting RSE et audits sur mesure.</td>
+            <td>500 - 5 000 €/prestation</td>
+        </tr>
+        <tr>
+            <td>Modules à la carte</td>
+            <td>Fonctionnalités ou outils payants (diagnostics avancés, tableaux de bord).</td>
+            <td>Paiement par module</td>
+        </tr>
+        <tr>
+            <td>Partenariats et commissions</td>
+            <td>Mise en relation avec des partenaires contre une commission.</td>
+            <td>% sur ventes partenaires</td>
+        </tr>
+        <tr>
+            <td>Analyses et benchmarks</td>
+            <td>Vente de rapports RSE basés sur les données collectées.</td>
+            <td>Rapport payant (500-2000 €)</td>
+        </tr>
+        <tr>
+            <td>Sponsoring et publicité</td>
+            <td>Espaces sponsorisés pour partenaires ou solutions écoresponsables.</td>
+            <td>Paiement par sponsor</td>
+        </tr>
+        <tr>
+            <td>Packages combinés</td>
+            <td>Offres groupées incluant les services télécoms et l’accès à la plateforme.</td>
+            <td>Prix combiné</td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="#" class="scroll-to-top" id="scrollToTop">
+        &#8679;
+    </a>
 </section>
 </body>
 </html>
