--- a/index.html
+++ b/index.html
@@ -39,26 +39,29 @@
 
 
 
-    <h1>Notre objectif</h1>
-    <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
-    <li>Environnement : impacts liés aux procédés de production (ex : consommation d’énergie et émissions de gaz à effet
-        de serre) ainsi qu’à l’usage du produit et à sa fin de vie ;
-    </li>
-    <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les
-        droits humains des employés et de la communauté, par exemple le harcèlement ;
-    </li>
-    <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
-    <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les
-        fournisseurs.
-    </li>
-    <img alt="obj" src="img/objectifs.jpeg">
+<div style="display: flex; align-items: center;">
+    <div style="flex: 1;">
+        <h1>Notre objectif</h1>
+        <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
+        <ul>
+            <li>Environnement : impacts liés aux procédés de production (ex : consommation d’énergie et émissions de gaz à effet de serre) ainsi qu’à l’usage du produit et à sa fin de vie ;</li>
+            <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les droits humains des employés et de la communauté, par exemple le harcèlement ;</li>
+            <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
+            <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les fournisseurs.</li>
+        </ul>
+    </div>
+    <img alt="obj" src="img/objectifs.jpeg" style="margin-left: 20px; flex: 1;">
+</div>
 
 
 
-    <h1>La RSE qu'est-ce que c'est ?</h1>
-    <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
-    <img alt="rse" src="img/rse.webp">
-
+<div style="display: flex; align-items: center;">
+    <img alt="rse" src="img/rsepres.webp" style="margin-right: 20px; flex: 1;">
+    <div style="flex: 1;">
+        <h1>La RSE qu'est-ce que c'est ?</h1>
+        <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
+    </div>
+</div>
     <div style="display: flex; align-items: center;">
         <div style="flex: 1;">
             <h1>La RSE au cœur des PME</h1>
@@ -70,11 +73,15 @@
         <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
     </div>
 
-    <h1>Données :</h1>
-    <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
-        De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
-    </p>
-    <img alt="donnee" src="img/donnée.jpeg">
+<div style="display: flex; align-items: center;">
+    <img alt="donnee" src="img/donnée.jpeg" style="margin-right: 20px; flex: 1;">
+    <div style="flex: 1;">
+        <h1>Données :</h1>
+        <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
+            De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
+        </p>
+    </div>
+</div>
 
     <h1>Offres :</h1>
     ////
