chnagement de style

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 
     <h1>Offres :</h1>
-    ////
+    <p>Isso 26000/14001</p>
 
     <h1>Rentabilités :</h1>
     <table border="1" style="border-collapse: collapse; width: 100%;">
