--- a/about.html
+++ b/about.html
@@ -47,5 +47,16 @@
   </table>
 </section>
 
+<section id="footer">
+    <footer>
+      <h2>Contacts</h2>
+      <p>Florimon : </p><a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">linkedIn</a>
+      <p>Wayan : </p><a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">linkedIn</a>
+      <p>Aude : </p><a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">linkedIn</a>
+      <p>Noam : </p><a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">linkedIn</a>
+      <p>Dan </p><a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">linkedIn</a>
+    </footer>
+</section>
+
 </body>
 </html>
