ajout du thème + style

--- a/about.html
+++ b/about.html
@@ -12,7 +12,16 @@
   <p>Nous avons pu faire part de cette hackathon grâce à notre établissement </p>
   <br>
   <img src="img/hackathon%20.jpg" style="width: 35%">
-  <br>
+</section>
+
+<section id="thème">
+<h2>Thème du hackathon</h2>
+  <p>Créer des offres RSE Accessibles inclusives pour les proPME</p>
+  <img src="img/thème.jpg" style="width: 35%">
+
+</section>
+
+<section id="team">
   <h2>Qui sommes-nous</h2>
 
   <table>
@@ -54,7 +63,7 @@
       <p>Wayan : </p><a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">linkedIn</a>
       <p>Aude : </p><a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">linkedIn</a>
       <p>Noam : </p><a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">linkedIn</a>
-      <p>Dan </p><a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">linkedIn</a>
+      <p>Dan :</p><a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">linkedIn</a>
     </footer>
 </section>
 
