--- a/about.html
+++ b/about.html
@@ -7,6 +7,23 @@
 </head>
 <body>
 
+<nav>
+  <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
+    <div style="display: flex; align-items: center;">
+      <img alt="orange" src="img/orangelogo.png" style="width: 150px; margin-right: 20px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="expertise.html">Expertise</a></li>
+      <li><a href="calculator.html">Calculez son RSE</a></li>
+      <li><a href="about.html">A propos</a></li>
+    </div>
+    <li style="display: flex; align-items: center;">
+      <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
+      <a>Se connecter</a>
+    </li>
+  </ul>
+</nav>
+
+
 <section id="hackathon">
   <h1>Le hackathon chez Orange</h1>
   <p>Nous avons pu faire part de cette hackathon grâce à notre établissement </p>
@@ -57,15 +74,31 @@
 </section>
 
 <section id="footer">
-    <footer>
-      <h2>Contacts</h2>
-      <p>Florimon : </p><a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">linkedIn</a>
-      <p>Wayan : </p><a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">linkedIn</a>
-      <p>Aude : </p><a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">linkedIn</a>
-      <p>Noam : </p><a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">linkedIn</a>
-      <p>Dan :</p><a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">linkedIn</a>
-    </footer>
+  <footer>
+    <h2>Contacts</h2>
+    <div class="contact">
+      <div>
+        <p>Florimon :</p>
+        <a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">LinkedIn</a>
+      </div>
+      <div>
+        <p>Wayan :</p>
+        <a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">LinkedIn</a>
+      </div>
+      <div>
+        <p>Aude :</p>
+        <a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">LinkedIn</a>
+      </div>
+      <div>
+        <p>Noam :</p>
+        <a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">LinkedIn</a>
+      </div>
+      <div>
+        <p>Dan :</p>
+        <a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">LinkedIn</a>
+      </div>
+    </div>
+  </footer>
 </section>
-
 </body>
 </html>
