header mis en place

--- a/connexion.html
+++ b/connexion.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calculateur RSE</title>
-    <link rel="stylesheet" href="styleIndex.css">
+    <title>Title</title>
+<link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
 <nav>
@@ -17,10 +17,12 @@
         </div>
         <li style="display: flex; align-items: center;">
             <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
-            <a href="connexion.html">Se connecter</a>
+            <a href="connexion.html">Mon compte</a>
         </li>
     </ul>
 </nav>
+<section id="bande">
+</section>
 
 </body>
 </html>
