--- a/expertise.html
+++ b/expertise.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Expertise</title>
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
-
+<nav>
+    <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
+        <div style="display: flex; align-items: center;">
+            <img alt="orange" src="img/orangelogo.png" style="width: 150px; margin-right: 20px;">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="expertise.html">Expertise</a></li>
+            <li><a href="calculator.html">Calculez son RSE</a></li>
+            <li><a href="about.html">A propos</a></li>
+        </div>
+        <li style="display: flex; align-items: center;">
+            <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
+            <a href="connexion.html">Se connecter</a>
+        </li>
+    </ul>
+</nav>
 </body>
 </html>
