--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         </div>
         <li style="display: flex; align-items: center;">
             <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
-            <a>Se connecter</a>
+            <a href="connexion.html">Se connecter</a>
         </li>
     </ul>
 </nav>
+
 <section id="home">
     <div style="display: flex; align-items: center; margin-top: 0;">
         <div style="flex: 1;">
