changement du logo + le style

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,7 @@
 <nav>
     <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
         <div style="display: flex; align-items: center;">
-            <img alt="orange" src="img/orangelogo.png" style="width: 150px; margin-right: 20px;">
+           <a href="index.html"> <img alt="orange" src="img/logo%20Act%20%204%20change.webp" style="width: 160px; margin-right: 20px;"></a>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="calculator.html">Calculez son RSE</a></li>
@@ -26,6 +26,7 @@
 </nav>
 
 
+<section id="calculator">
 <div class="container">
     <h1>Calculateur de Responsabilité Sociétale des Entreprises (RSE)</h1>
     <p>Répondez par "Oui" ou "Non" à chaque question pour évaluer votre entreprise sur les différents critères RSE.</p>
@@ -185,7 +186,7 @@
         <div id="result_global" class="result" style="display: none;"></div>
     </div>
 </div>
-
+</section>
 <script src="js/calculator.js">
 
 </script>
