--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <nav>
   <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
     <div style="display: flex; align-items: center;">
-      <img alt="orange" src="img/orangelogo.png" style="width: 150px; margin-right: 20px;">
+      <a href="index.html"><img alt="orange" src="img/logo%20Act%20%204%20change.webp" style="width: 160px; margin-right: 20px;"></a>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="expertise.html">Expertise</a></li>
       <li><a href="calculator.html">Calculez son RSE</a></li>
